# Mesa-Premium

./: .coverage  .env.example  .env.exemplo  .env.template  .gitignore  .pre-commit-config.yaml  ANALISE_TECNICA.md  BUILD_WINDOWS.md  CHECK.md  CLAUDE.md  DEPLOY_GUIDE.md  DISTRIBUICAO.md  LOCAL_TEST_GUIDE.md  MenuAutomacoes.spec  MenuAutomacoes_Debug.spec  README.md  README_MIGRACAO.md  REAL_TOKEN_TEST.md  REFATORACAO.md  TESTING_GUIDE.md  TESTING_TUTORIAL.md  VPS_SETUP_GUIDE.md  WEBDRIVER_ASYNC_IMPLEMENTATION.md  automacao_config.py  automacao_manager.py  automation_registry.py  cqrs_commands.py  cqrs_handlers.py  cqrs_mediator.py  cqrs_queries.py  database.py  di_container.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  execution_manager.py  execution_manager_cqrs.py  generate_crypto_keys.py  juro_mensal_mysql.py  menu_principal.py  (+22 more)
automacoes/: __init__.py  exemplo_automacao.py
backend/: manage.py  requirements.txt
backend/authentication/: admin.py  models.py
backend/authentication/migrations/: 0001_initial.py
backend/mesa_premium_web/: asgi.py  settings.py  urls.py  wsgi.py
backend/token_extraction/: admin.py  apps.py  models.py
backend/token_extraction/migrations/: 0001_initial.py
configs/: config_automacoes.json  user_config_simplified.json
docs/: CRYPTO_SETUP.md  DEPLOY_GUIDE.md  DEPLOY_TEST_REPORT.md  LOCAL_TEST_GUIDE.md  LOCAL_TEST_WITH_VPS.md  PERFORMANCE.md  PRE_COMMIT_GUIDE.md  SECURITY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  configuracoes_ambiente.md
fastapi/: .coverage  .env.example  .env.production  .env.staging  Dockerfile  main.py  pytest.ini  requirements-secure.txt  requirements.txt  security_audit.json  vulnerabilities.json
fastapi/.github/workflows/: security-updates.yml
fastapi/database/: connection.py
fastapi/middleware/: __init__.py  rate_limiting.py
fastapi/models/: hub_token.py  structured_data.py
fastapi/routes/: automations.py  fixed_income.py  health.py  structured.py  tokens.py
fastapi/scripts/: automated_security_updates.py  deploy.py  security_audit.py  update_dependencies.py
fastapi/services/: fixed_income_exceptions.py  fixed_income_service.py  hub_token_service.py  hub_token_service_refactored.py  structured_exceptions.py  structured_service.py
fastapi/tests/: __init__.py  conftest.py
fastapi/tests/fixtures/: sample_data.py
fastapi/tests/integration/: test_api_endpoints.py  test_structured_endpoints.py
fastapi/tests/mocks/: selenium_mocks.py
fastapi/tests/unit/: test_hub_token_service.py  test_state_manager.py  test_structured_service.py
fastapi/utils/: crypto.py  crypto_utils.py  log_sanitizer.py  logging_config.py  secure_subprocess.py  state_manager.py
hooks/: hook-optimize.py
logs/: log_completo_20250618_173226.txt
migrations/: add_user_login_hash_to_hub_tokens.sql  migrate_hub_tokens_to_encrypted.py
nginx/: nginx.conf
nginx/sites-available/: mesa_premium.conf
scripts/: configure_mysql_vps.sh  create_tables.sql  create_tables_with_crypto.sql  mysql_commands.sql  setup-ssl.sh  setup_database.sh  test-local-deploy.sh
tests/: test_crypto.py
